# DataMatrix

./: README.md  pyproject.toml  requirements.txt
terraform/: fn_st_xlsx  terraform.tfvars
terraform/schema_bk/: Invoices_schema.json  OrderLeads_schema.json
