[tool.poetry]
name = "datamatrix"
version = "0.1.0"
description = ""
authors = ["RodolfoxvData <136007122+Rodolfoxxv@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
google-cloud-storage = "^2.16.0"
google-cloud-bigquery = "^3.19.0"
duckdb = "^0.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
